// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ExpensesSummery Correctly for 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing
       
      <span>
        1
      </span>
       
      expense totalling
       
      <span>
        11,195
         
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`Test ExpensesSummery with multiple expense correctly Correctly 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing
       
      <span>
        3
      </span>
       
      expenses totalling
       
      <span>
        210,695
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
